Change scripts to use absolute paths. Fix script logic and compliance with shellcheck advisories. Move i3blocks scripts to ~/.local/bin

--- a/.local/bin/todo
+++ b/.local/bin/todo
@@ -1,19 +1,19 @@
 #!/bin/sh
 
+TMPFILE=$(/usr/bin/mktemp) && trap '/usr/bin/rm -rf "$TMPFILE"' EXIT
 TODO="${XDG_DATA_HOME:?}/personal/todo"
-TEMP=/tmp/todo.tmp
 
-[ $# -eq 0 ] && nl -n ln < "${TODO}" && exit 0
+[ $# -eq 0 ] && /usr/bin/nl -n ln < "${TODO}" && exit 0
 
 case "$1" in
 add)
 	shift
 	echo "$@" >> "${TODO}"
-	nl -n ln < "${TODO}" ;;
+	/usr/bin/nl -n ln < "${TODO}" ;;
 rm)
 	shift
-	sed "$1d" < "${TODO}" > "${TEMP}" && mv "${TEMP}" "${TODO}"
-	nl -n ln < "${TODO}" ;;
+	/usr/bin/sed "$1d" < "${TODO}" > "${TMPFILE}" && /usr/bin/mv "${TMPFILE}" "${TODO}"
+	/usr/bin/nl -n ln < "${TODO}" ;;
 *)
-	printf "\033[0mUsage: %s add [text] | rm [n]\n" "$(basename "$0")" ;;
+	printf "Usage: %s add [text] | rm [n]\n" "$(/usr/bin/basename "$0")" ;;
 esac
